--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  flutter_launcher_icons: ^0.13.1 
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/iconoapp.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -63,6 +69,7 @@ flutter:
     - assets/gta6.jpg
     - assets/lock.png
     - assets/invernadero.png
+    - assets/iconoapp.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
