--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^3.0.0
   
   flutter_launcher_icons: ^0.13.1 
 
@@ -68,7 +69,7 @@ flutter:
     - assets/gemini.png
     - assets/gta6.jpg
     - assets/lock.png
-    - assets/invernadero.png
+    - assets/invernadero.jpg
     - assets/iconoapp.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
