--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: greenhouse
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -11,25 +11,26 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  http: ^1.1.0  # ← AGREGADO para hacer peticiones HTTP
+  http: ^1.1.0 # ← AGREGADO para hacer peticiones HTTP
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  flutter_launcher_icons: ^0.13.1 
+  flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/iconoapp.png"
+  image_path: "assets/iconapp2.png"
 
 flutter:
   uses-material-design: true
-  
+
   assets:
     - assets/gemini.png
     - assets/gta6.jpg
     - assets/lock.png
     - assets/invernadero.jpg
     - assets/iconoapp.png
+    - assets/iconapp2.png
