--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.1.0 # ← AGREGADO para hacer peticiones HTTP
   image_picker: ^1.0.7
+  flutter_dotenv: ^5.1.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -35,3 +37,4 @@ flutter:
     - assets/invernadero.jpg
     - assets/iconoapp.png
     - assets/iconapp2.png
+    - .env
